--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "authors": [
     {
       "name": "Rhys Adams",
-      "email": "hello@rhys.me",
+      "email": "rhys@20g.io",
       "homepage": "https://20g.io",
       "role": "DevOps Engineer"
     }
